--- a/package.json
+++ b/package.json
@@ -41,20 +41,24 @@
   },
   "devDependencies": {
     "@types/node": "^8.0.17",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.2",
-    "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
+    "resolve-url-loader": "^2.1.0",
     "tslint": "^5.5.0",
     "typescript": "^2.4.2",
-    "url-loader": "^0.5.9",
     "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.6.1",
+
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.2.2",
+
+    "style-loader": "^0.18.2",
+    "css-loader": "^0.28.5",
+    "sass-loader": "^6.0.6",
+
+    "raw-loader": "^0.5.1",
+    "url-loader": "^0.5.9",
+    "file-loader": "^0.11.2"
   }
 }
