--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "contentful": "^4.6.1",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "ng2-tooltip": "0.0.7",
     "pg": "^7.1.0",
     "rxjs": "^5.4.2",
     "ts-md5": "^1.2.0",
@@ -49,14 +50,11 @@
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
     "webpack-dev-server": "^2.6.1",
-
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.2",
-
     "style-loader": "^0.18.2",
     "css-loader": "^0.28.5",
     "sass-loader": "^6.0.6",
-
     "raw-loader": "^0.5.1",
     "url-loader": "^0.5.9",
     "file-loader": "^0.11.2"
